--- a/internal/app/static/index.html
+++ b/internal/app/static/index.html
@@ -82,6 +82,7 @@
     var app = new Vue({
         el: '#app',
         data: {
+          connection: null,
           domainList: [],
           templateList: [],
           results: [],
@@ -89,22 +90,22 @@
         },
         methods: {
             search: function() {
-                this.$http.post(`http://127.0.0.1:8080/api/search`, this.domainList).then(resp => {
+                /*this.$http.post(`http://127.0.0.1:8080/api/search`, this.domainList).then(resp => {
                     console.log(JSON.stringify(resp.data))
                     this.domainList = resp.data
                 }).catch((resp) => {
                     console.log('err:', resp)
-                })
+                })*/
+                this.connection.send(JSON.stringify({event: "search", msg: this.domainList}));
             },
             scan: function() {
-                console.log('scan')
                 scanTemplates = []
                 for (var i = 0; i < this.checkedTemplates.length; i++) {
                     if (this.checkedTemplates[i].checked === true) {
                         scanTemplates.push(this.checkedTemplates[i].name)
                     }
                 }
-                this.$http.post(`http://127.0.0.1:8080/api/scan`, {domains: this.domainList, templates: scanTemplates}).then(resp => {
+                /*this.$http.post(`http://127.0.0.1:8080/api/scan`, {domains: this.domainList, templates: scanTemplates}).then(resp => {
                     if (resp.status == 200) {
                         console.log(JSON.stringify(resp.data))
                         this.results = resp.data
@@ -113,7 +114,8 @@
                     }
                 }).catch((resp) => {
                     console.log('err:', resp)
-                })
+                })*/
+                this.connection.send(JSON.stringify({event: "scan", msg: {domains: this.domainList, templates: scanTemplates}}));
             }
         },
         created: function() {
@@ -122,7 +124,7 @@
                 this.domainList = resp.data
             }).catch((resp) => {
                 console.log('err:', resp)
-            })
+            });
 
             this.$http.get(`http://127.0.0.1:8080/api/getTemplates`, this.domainList).then(resp => {
                 console.log(JSON.stringify(resp.data))
@@ -132,7 +134,21 @@
                 }
             }).catch((resp) => {
                 console.log('err:', resp)
-            })
+            });
+
+            this.connection = new WebSocket("ws://127.0.0.1:8080/ws");
+
+            this.connection.onmessage = (event) => {
+                console.log(event.data);
+                const obj = JSON.parse(event.data);
+                console.log(obj.event);
+                console.log(obj.msg);
+                if (String(obj.event) === "search") {
+                        this.domainList = obj.msg
+                } else if (String(obj.event) === "scan") {
+                        this.results = obj.msg
+                }
+            };
         }
     })
 </script>
